--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="title-card">
+        <h1>Rock_Paper_Scissors</h1>
+        <h3>You're not winning this one</h3>
+    </div>
+
+    <div class="score-board">
+        <div class="card" id="player-score">
+
+        </div>
+        <div class="card" id="computer-score">
+
+        </div>
+    </div>
+
     <div>
         <button class="selection" id="rock">Rock</button>
         <button class="selection" id="paper">Paper</button>
