Added div for start game menu and spans to scoreboard

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <div class="title-card">
-        <h1>Rock_Paper_Scissors</h1>
+        <h1>Rock Paper Scissors</h1>
         <h3>You're not winning this one</h3>
     </div>
+    
+    <div id="start-game"></div>
 
     <div class="score-board">
-        <div class="card" id="player-score">
-
-        </div>
-        <div class="card" id="computer-score">
-
-        </div>
+        <span class="card" id="player-score">
+        </span>
+        <span class="card" id="computer-score">
+        </span>
     </div>
 
     <div>
-        <button class="selection" id="rock">Rock</button>
-        <button class="selection" id="paper">Paper</button>
-        <button class="selection" id="scissors">Scissors</button>
+        <button class="selection" id="rock"></button>
+        <button class="selection" id="paper"></button>
+        <button class="selection" id="scissors"></button>
     </div>
     <script src="script.js"></script>
 </body>
