Centred the title card and commented out everything else to be added later

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Rock Paper Scissors</h1>
         <h3>You're not winning this one</h3>
     </div>
-    
+<!--     
     <div id="start-game"></div>
 
     <div class="score-board">
@@ -25,7 +25,7 @@
         <button class="selection" id="rock"></button>
         <button class="selection" id="paper"></button>
         <button class="selection" id="scissors"></button>
-    </div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
