--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="title-card">
+    <section class="title-card">
         <h1>Rock Paper Scissors</h1>
         <h3>You're not winning this one</h3>
-    </div>
-<!--     
+    </section>
+    
     <div id="start-game"></div>
 
-    <div class="score-board">
+    <section class="score-board">
         <span class="card" id="player-score">
         </span>
         <span class="card" id="computer-score">
         </span>
-    </div>
+    </section>
 
-    <div>
+    <section class="choices" id="choice-buttons">
         <button class="selection" id="rock"></button>
         <button class="selection" id="paper"></button>
         <button class="selection" id="scissors"></button>
-    </div> -->
+    </section>
+
+    <section class="footer">
+
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
