--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="title-card">
-        <h1>Rock Paper Scissors</h1>
-        <h3>You're not winning this one</h3>
-    </section>
-    
-    <div id="start-game"></div>
+    <div class="container">
+        <section class="title-card">
+            <h1>Rock Paper Scissors</h1>
+            <h3>You're not winning this one</h3>
+        </section>
 
-    <section class="score-board">
-        <span class="card" id="player-score">
-        </span>
-        <span class="card" id="computer-score">
-        </span>
-    </section>
+        <section class="score-board">
+            <span class="card" id="player-score">
+            </span>
+            <span class="card" id="computer-score">
+            </span>
+        </section>
 
-    <section class="choices" id="choice-buttons">
-        <button class="selection" id="rock"></button>
-        <button class="selection" id="paper"></button>
-        <button class="selection" id="scissors"></button>
-    </section>
+        <section class="choices" id="choice-buttons">
+            <button class="selection" id="rock"></button>
+            <button class="selection" id="paper"></button>
+            <button class="selection" id="scissors"></button>
+        </section>
 
-    <section class="footer">
-
-    </section>
+        <section class="footer">
+            <a href="https://www.freepik.com/free-vector/pixel-art-vacation-background_29019073.htm#&position=1&from_view=undefined">Image by pikisuperstar</a> on Freepik
+        </section>
+    </div>
 
     <script src="script.js"></script>
 </body>
