Created a container div instead of using the body as the base

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <section class="title-card">
             <h1>Rock Paper Scissors</h1>
-            <h3>You're not winning this one</h3>
+            <h3>PENIS PENIS PENIS PENIS PENIS</h3>
         </section>
 
         <section class="score-board">
@@ -30,7 +30,6 @@
             <a href="https://www.freepik.com/free-vector/pixel-art-vacation-background_29019073.htm#&position=1&from_view=undefined">Image by pikisuperstar</a> on Freepik
         </section>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
