--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <section class="title-card">
             <h1>Rock Paper Scissors</h1>
-            <h3>PENIS PENIS PENIS PENIS PENIS</h3>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
         </section>
 
         <section class="score-board">
