--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <section class="title-card">
-            <h1>Rock Paper Scissors</h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+            <h1 class="item">Rock Paper Scissors</h1>
+            <h3 class="item">!!TRY YOUR LUCK!!</h3>
+            <button class="item">Play Game</button>
         </section>
 
         <section class="score-board">
