--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </section>
 
         <section class="choices" id="choice-buttons">
-            <button class="selection" id="rock"></button>
+            <!-- <button class="selection" id="rock"></button>
             <button class="selection" id="paper"></button>
-            <button class="selection" id="scissors"></button>
+            <button class="selection" id="scissors"></button> -->
         </section>
 
         <section class="footer">
