--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <section class="title-card">
             <h1 class="item">Rock Paper Scissors</h1>
             <h3 class="item">!!TRY YOUR LUCK!!</h3>
-            <button class="item">Play Game</button>
+            <button class="item" id="start">Play Game</button>
         </section>
 
-        <section class="score-board">
+        <section id="score-board">
             <span class="card" id="player-score">
             </span>
             <span class="card" id="computer-score">
