Created the card class for score/game display

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
         </section>
 
         <section id="score-board">
-            <span class="card" id="player-score">
-            </span>
-            <span class="card" id="computer-score">
-            </span>
+            <div id="player-score">
+                <!-- <h4></h4>
+                <h5></h5> -->
+                <!-- img here -->
+            </div>
+            <div id="computer-score">
+                <!-- <h4></h4>
+                <h5></h5> -->
+                <!-- img here -->
+            </div>
         </section>
 
         <section class="choices" id="choice-buttons">
