Added choice buttons and their event listener

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="title-card">
             <h1 class="item">Rock Paper Scissors</h1>
             <h3 class="item">!!TRY YOUR LUCK!!</h3>
-            <button class="item" id="start">Play Game</button>
+            <button type="button" class="item" id="start">Play Game</button>
         </section>
 
         <section id="score-board">
@@ -27,7 +27,7 @@
             </div>
         </section>
 
-        <section class="choices" id="choice-buttons">
+        <section class="options" id="options">
             <!-- <button class="selection" id="rock"></button>
             <button class="selection" id="paper"></button>
             <button class="selection" id="scissors"></button> -->
