Added updateScore function

--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@
             <button type="button" class="item" id="start">Play Game</button>
         </section>
 
-        <section id="score-board">
-            <div id="player-score">
-                <!-- <h4></h4>
-                <h5></h5> -->
-                <!-- img here -->
-            </div>
-            <div id="computer-score">
-                <!-- <h4></h4>
-                <h5></h5> -->
-                <!-- img here -->
-            </div>
-        </section>
+        <section class="game-body">
+            <section id="score-board">
+                <div id="player-score">
+                    <!-- <h4></h4>
+                    <h5></h5> -->
+                    <!-- img here -->
+                </div>
+                <div id="computer-score">
+                    <!-- <h4></h4>
+                    <h5></h5> -->
+                    <!-- img here -->
+                </div>
+            </section>
 
-        <section class="options" id="options">
-            <!-- <button class="selection" id="rock"></button>
-            <button class="selection" id="paper"></button>
-            <button class="selection" id="scissors"></button> -->
+            <section class="options" id="options"></section>
         </section>
 
         <section class="footer">
