Added disappearing  round-end messages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section></section>
     <div class="container" id="container">
         <section class="title-card">
             <h1 class="item">Rock Paper Scissors</h1>
@@ -17,14 +18,8 @@
         <section class="game-body">
             <section id="score-board">
                 <div id="player-score">
-                    <!-- <h4></h4>
-                    <h5></h5> -->
-                    <!-- img here -->
                 </div>
                 <div id="computer-score">
-                    <!-- <h4></h4>
-                    <h5></h5> -->
-                    <!-- img here -->
                 </div>
             </section>
 
