Removed unused bloat from the stylesheet

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section></section>
     <div class="container" id="container">
-        <section class="title-card">
+        <section class="title-card title-card2" id="title-card">
             <h1 class="item">Rock Paper Scissors</h1>
             <h3 class="item">!!TRY YOUR LUCK!!</h3>
             <button type="button" class="item" id="start">Play Game</button>
@@ -30,6 +29,7 @@
             <a href="https://www.freepik.com/free-vector/pixel-art-vacation-background_29019073.htm#&position=1&from_view=undefined">Image by pikisuperstar</a> on Freepik
         </section>
     </div>
+    <section id="displaySection"></section>
     <script src="script.js"></script>
 </body>
 </html>
