Made footer smaller

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
 
         <section class="footer">
-            <a href="https://www.freepik.com/free-vector/pixel-art-vacation-background_29019073.htm#&position=1&from_view=undefined">Image by pikisuperstar</a> on Freepik
+            <h6><a href="https://www.freepik.com/free-vector/pixel-art-vacation-background_29019073.htm#&position=1&from_view=undefined">Image by pikisuperstar</a> on Freepik</h6>
         </section>
     </div>
     <section id="displaySection"></section>
